fix: better vertical shift for slider navbuttons

--- a/src/scss/components/slider.scss
+++ b/src/scss/components/slider.scss
@@ -12,7 +12,7 @@
         height: 52px;
 
         position: absolute;
-        top: calc(50% - 42px);
+        top: calc(50% - 26px);
         border: 2px solid $color-primary;
         border-radius: 100%;
         &--left {
